--- a/wlanthermo_lovelace.yaml
+++ b/wlanthermo_lovelace.yaml
@@ -20,6 +20,10 @@ views:
             cards:
               - type: custom:badge-card
                 badges:
+                  - entity: sensor.wlanthermo_channel_1_timeleft
+                    name: Channel 1 Timer
+                  - entity: sensor.wlanthermo_channel_2_timeleft
+                    name: Channel 2 Timer
                   - entity: sensor.wlanthermo_channel_3_timeleft
                     name: Channel 3 Timer
                   - entity: sensor.wlanthermo_channel_4_timeleft
@@ -30,8 +34,6 @@ views:
                   - sensor.wlanthermo_channel_2_color
                   - sensor.wlanthermo_channel_3_color
                   - sensor.wlanthermo_channel_4_color
-                  - sensor.wlanthermo_pitmaster_value_color
-                  - sensor.wlanthermo_pitmaster_set_color
                   - sensor.wlanthermo_online_since
                 card:
                   type: custom:apexcharts-card
@@ -41,62 +43,46 @@ views:
                     parseInt(states['sensor.wlanthermo_online_since'].state) ||
                     0) + 'min'}
                   series:
-                    - entity: sensor.wlanthermo_pitmaster_1_all
-                      statistics:
-                        type: max
-                        period: 5minute
-                      yaxis_id: '1'
-                      stroke_width: 1
-                      type: area
-                      opacity: 0.25
-                      curve: stepline
-                      color: >-
-                        ${states['sensor.wlanthermo_pitmaster_value_color'].state}
-                    - entity: sensor.wlanthermo_channel_1_all
+                    - entity: sensor.template_wlanthermo_channel_1_all
                       statistics:
                         type: max
                         period: 5minute
                       yaxis_id: '0'
                       stroke_width: 3
                       color: ${states['sensor.wlanthermo_channel_1_color'].state}
-                    - entity: sensor.wlanthermo_channel_2_all
+                    - entity: sensor.template_wlanthermo_channel_2_all
                       statistics:
                         type: max
                         period: 5minute
                       yaxis_id: '0'
                       stroke_width: 3
                       color: ${states['sensor.wlanthermo_channel_2_color'].state}
-                    - entity: sensor.wlanthermo_channel_3_all
+                    - entity: sensor.template_wlanthermo_channel_3_all
                       statistics:
                         type: max
                         period: 5minute
                       yaxis_id: '0'
                       stroke_width: 3
                       color: ${states['sensor.wlanthermo_channel_4_color'].state}
-                    - entity: sensor.wlanthermo_channel_4_all
+                    - entity: sensor.template_wlanthermo_channel_4_all
                       statistics:
                         type: max
                         period: 5minute
                       yaxis_id: '0'
                       stroke_width: 3
                       color: ${states['sensor.wlanthermo_channel_3_color'].state}
-                    - entity: number.wlanthermo_channel_3_max
+                    - entity: number.3_none_maximum
                       yaxis_id: '0'
                       stroke_width: 1
                       color: ${states['sensor.wlanthermo_channel_3_color'].state}
                       curve: stepline
                       unit: °C
-                    - entity: number.wlanthermo_channel_4_max
+                    - entity: number.4_none_maximum
                       yaxis_id: '0'
                       stroke_width: 1
                       color: ${states['sensor.wlanthermo_channel_4_color'].state}
                       curve: stepline
                       unit: °C
-                    - entity: input_number.wlanthermo_pitmaster_temp
-                      yaxis_id: '0'
-                      stroke_width: 1
-                      color: ${states['sensor.wlanthermo_pitmaster_set_color'].state}
-                      curve: stepline
                   yaxis:
                     - id: '1'
                       opposite: true
@@ -127,20 +113,20 @@ views:
               max_cols: 3
             cards:
               - conditions:
-                  - entity: sensor.wlanthermo_channel_1_all
+                  - entity: sensor.template_wlanthermo_channel_1_all
                     state_not: unavailable
                 type: conditional
                 card:
                   type: custom:vertical-stack-in-card
                   cards:
-                    - entity: sensor.wlanthermo_channel_1_all
+                    - entity: sensor.template_wlanthermo_channel_1_all
                       type: entity
                     - entities:
                         - entity: input_text.wlanthermo_channel_1_name
                           name: Name
-                        - entity: number.wlanthermo_channel_1_min
+                        - entity: number.1_none_minimum
                           name: Minimum
-                        - entity: number.wlanthermo_channel_1_max
+                        - entity: number.1_none_maximum
                           name: Maxmimum
                       type: entities
                       header:
@@ -152,14 +138,14 @@ views:
               - card:
                   type: custom:vertical-stack-in-card
                   cards:
-                    - entity: sensor.wlanthermo_channel_2_all
+                    - entity: sensor.template_wlanthermo_channel_2_all
                       type: entity
                     - entities:
                         - entity: input_text.wlanthermo_channel_2_name
                           name: Name
-                        - entity: number.wlanthermo_channel_2_min
+                        - entity: number.2_none_minimum
                           name: Minimum
-                        - entity: number.wlanthermo_channel_2_max
+                        - entity: number.2_none_maximum
                           name: Maxmimum
                       type: entities
                       header:
@@ -169,20 +155,20 @@ views:
                           - switch.wlanthermo_channel_2_alert
                           - input_boolean.wlanthermo_channel_2_timer
                 conditions:
-                  - entity: sensor.wlanthermo_channel_2_all
+                  - entity: sensor.template_wlanthermo_channel_2_all
                     state_not: unavailable
                 type: conditional
               - card:
                   type: custom:vertical-stack-in-card
                   cards:
-                    - entity: sensor.wlanthermo_channel_3_all
+                    - entity: sensor.template_wlanthermo_channel_3_all
                       type: entity
                     - entities:
                         - entity: input_text.wlanthermo_channel_3_name
                           name: Name
-                        - entity: number.wlanthermo_channel_3_min
+                        - entity: number.3_none_minimum
                           name: Minimum
-                        - entity: number.wlanthermo_channel_3_max
+                        - entity: number.3_none_maximum
                           name: Maxmimum
                       type: entities
                       header:
@@ -192,20 +178,20 @@ views:
                           - switch.wlanthermo_channel_3_alert
                           - input_boolean.wlanthermo_channel_3_timer
                 conditions:
-                  - entity: sensor.wlanthermo_channel_3_all
+                  - entity: sensor.template_wlanthermo_channel_3_all
                     state_not: unavailable
                 type: conditional
               - card:
                   type: custom:vertical-stack-in-card
                   cards:
-                    - entity: sensor.wlanthermo_channel_4_all
+                    - entity: sensor.template_wlanthermo_channel_4_all
                       type: entity
                     - entities:
                         - entity: input_text.wlanthermo_channel_4_name
                           name: Name
-                        - entity: number.wlanthermo_channel_4_min
+                        - entity: number.4_none_minimum
                           name: Minimum
-                        - entity: number.wlanthermo_channel_4_max
+                        - entity: number.4_none_maximum
                           name: Maxmimum
                       type: entities
                       header:
@@ -215,20 +201,20 @@ views:
                           - switch.wlanthermo_channel_4_alert
                           - input_boolean.wlanthermo_channel_4_timer
                 conditions:
-                  - entity: sensor.wlanthermo_channel_4_all
+                  - entity: sensor.template_wlanthermo_channel_4_all
                     state_not: unavailable
                 type: conditional
               - card:
                   type: custom:vertical-stack-in-card
                   cards:
-                    - entity: sensor.wlanthermo_channel_5_all
+                    - entity: sensor.template_wlanthermo_channel_5_all
                       type: entity
                     - entities:
                         - entity: input_text.wlanthermo_channel_5_name
                           name: Name
-                        - entity: number.wlanthermo_channel_5_min
+                        - entity: number.5_none_minimum
                           name: Minimum
-                        - entity: number.wlanthermo_channel_5_max
+                        - entity: number.5_none_maximum
                           name: Maxmimum
                       type: entities
                       header:
@@ -238,20 +224,20 @@ views:
                           - switch.wlanthermo_channel_5_alert
                           - input_boolean.wlanthermo_channel_5_timer
                 conditions:
-                  - entity: sensor.wlanthermo_channel_5_all
+                  - entity: sensor.template_wlanthermo_channel_5_all
                     state_not: unavailable
                 type: conditional
               - card:
                   type: custom:vertical-stack-in-card
                   cards:
-                    - entity: sensor.wlanthermo_channel_6_all
+                    - entity: sensor.template_wlanthermo_channel_6_all
                       type: entity
                     - entities:
                         - entity: input_text.wlanthermo_channel_6_name
                           name: Name
-                        - entity: number.wlanthermo_channel_6_min
+                        - entity: number.6_none_minimum
                           name: Minimum
-                        - entity: number.wlanthermo_channel_6_max
+                        - entity: number.6_none_maximum
                           name: Maxmimum
                       type: entities
                       header:
@@ -261,49 +247,7 @@ views:
                           - switch.wlanthermo_channel_6_alert
                           - input_boolean.wlanthermo_channel_6_timer
                 conditions:
-                  - entity: sensor.wlanthermo_channel_6_all
-                    state_not: unavailable
-                type: conditional
-              - card:
-                  type: custom:vertical-stack-in-card
-                  cards:
-                    - type: entity
-                      entity: sensor.wlanthermo_pitmaster_1_all
-                      name: Pitmaster
-                    - type: entities
-                      entities:
-                        - entity: select.wlanthermo_pitmaster_mode
-                          name: Modus
-                    - card:
-                        type: entities
-                        entities:
-                          - entity: select.wlanthermo_pitmaster_profile
-                            name: Profil
-                      conditions:
-                        - entity: select.wlanthermo_pitmaster_mode
-                          state_not: 'off'
-                      type: conditional
-                    - card:
-                        type: entities
-                        entities:
-                          - entity: select.wlanthermo_pitmaster_channel
-                            name: Kanal
-                          - entity: input_number.wlanthermo_pitmaster_temp
-                      conditions:
-                        - entity: select.wlanthermo_pitmaster_mode
-                          state: auto
-                      type: conditional
-                    - card:
-                        type: entities
-                        entities:
-                          - entity: number.wlanthermo_pitmaster_value
-                            name: Drehzahl
-                      conditions:
-                        - entity: select.wlanthermo_pitmaster_mode
-                          state: manual
-                      type: conditional
-                conditions:
-                  - entity: sensor.wlanthermo_pitmaster_1_all
+                  - entity: sensor.template_wlanthermo_channel_6_all
                     state_not: unavailable
                 type: conditional
               - type: custom:vertical-stack-in-card
